@@ -33,28 +33,28 @@
 #define SOAPLIB_H 
 
 
-//SOAP module API to be called in Upnp-Dk API
+// SOAP module API to be called in Upnp-Dk API
 /****************************************************************************
-*	Function :	soap_device_callback
+* Function :	soap_device_callback
 *
-*	Parameters :
-*		  IN http_parser_t *parser : Parsed request received by the device
-*		  IN http_message_t* request :	HTTP request 
-*		  INOUT SOCKINFO *info :	socket info
+* Parameters :
+*	IN http_parser_t *parser :	Parsed request received by the device
+*	IN http_message_t* request :	HTTP request 
+*	INOUT SOCKINFO *info :		socket info
 *
-*	Description :	This is a callback called by minisever after receiving 
-*		the request from the control point. This function will start 
-*		processing the request. It calls handle_invoke_action to handle the
-*		SOAP action
+* Description :	This is a callback called by minisever after receiving 
+*	the request from the control point. This function will start 
+*	processing the request. It calls handle_invoke_action to handle the
+*	SOAP action
 *
-*	Return :	void
+* Return : void
 *
-*	Note :
+* Note :
 ****************************************************************************/
-void soap_device_callback( 
-						  IN http_parser_t *parser, 
-						  IN http_message_t* request, 
-						  INOUT SOCKINFO *info );
+void soap_device_callback(
+	IN http_parser_t *parser, 
+	IN http_message_t* request, 
+	INOUT SOCKINFO *info );
 
 
 /****************************************************************************
