@@ -95,6 +95,7 @@ advertiseAndReplyThread( IN void *data )
 * Returns: void *
 *	1 if successful else appropriate error
 ***************************************************************************/
+#ifdef INCLUDE_DEVICE_APIS
 void
 ssdp_handle_device_request( IN http_message_t * hmsg,
                             IN struct sockaddr_in *dest_addr )
@@ -190,6 +191,7 @@ ssdp_handle_device_request( IN http_message_t * hmsg,
     TimerThreadSchedule( &gTimerThread, replyTime, REL_SEC, &job,
                          SHORT_TERM, NULL );
 }
+#endif
 
 /************************************************************************
 * Function : NewRequestHandler									
